--- a/DOM/InnovativeFeature/style.css
+++ b/DOM/InnovativeFeature/style.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -14,7 +15,7 @@ html,body{
     height: 100%;
     overflow: hidden;
 }
-
+  
 #cards{
     display: flex;
     align-items: center;
@@ -64,4 +65,75 @@ html,body{
     font-family: "Gilroy";
     color: whitesmoke;
 
+}
+
+a {
+    position: relative;
+    padding: 20px 50px;
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 200px;
+    overflow: hidden;
+    border-radius: 40px;
+    margin-left: 19px;
+}
+  
+a span {
+    position: relative;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-family: Arial;
+    /* letter-spacing: 8px; */
+    z-index: 1;
+}
+  
+a .liquid {
+    position: absolute;
+    top: -80px;
+    left: 0;
+    width: 200px;
+    height: 200px;
+    background-image: linear-gradient( 112.1deg,  rgba(32,38,57,1) 11.4%, rgba(63,76,119,1) 70.2% );
+    box-shadow: inset 0 0 50px rgba(48, 48, 48, 0.5);
+    transition: .5s;
+  }
+  
+a .liquid::after,
+a .liquid::before {
+    content: '';
+    width:200%;
+    height: 200%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -75%);
+    background: rgb(248, 247, 247);
+}
+  
+a .liquid::before {
+    
+    border-radius: 45%;
+    background: rgb(220, 218, 218);
+    animation: animate 5s linear infinite;
+}
+  
+a .liquid::after {
+    
+    border-radius: 40%;
+    background: rgba(255, 254, 254, 0.5);
+    animation: animate 10s linear infinite;
+}
+  
+a:hover .liquid{
+    top: -120px;
+}
+  
+@keyframes animate {
+    0% {
+      transform: translate(-50%, -75%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -75%) rotate(360deg);
+    }
 }
